--- a/.gitignore
+++ b/.gitignore
@@ -27,7 +27,7 @@ share/python-wheels/
 MANIFEST
 
 Documents/
-notebook/mogodb_demo.ipynb
+# notebook/mogodb_demo.ipynb
 # PyInstaller
 #  Usually these files are written by a python script from a template
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
